Fix menu on mobile

--- a/src/assets/styles/Home.module.css
+++ b/src/assets/styles/Home.module.css
@@ -24,7 +24,7 @@
 }
 
 .active {
-  transform: scale(0.85) translateY(165px);
+  transform: scale(0.85) translateY(215px);
 }
 
 @media screen and (min-width: 768px) {
